test/libyul/yulSyntaxTests/dot_trailing_function_ret.yul
{
    function x() -> a. {}
}
// ----
// SyntaxError 3384: (22-24): "a." is not a valid identifier (ends with a dot).
